# medlab

./: .gitignore  README.md
data/2-HEAD STD-39908/: 000000.dcm  000001.dcm  000002.dcm  000003.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm  000010.dcm  000011.dcm  000012.dcm  000013.dcm  000014.dcm  000015.dcm  000016.dcm  000017.dcm  000018.dcm  000019.dcm  000020.dcm  000021.dcm  000022.dcm  000023.dcm  000024.dcm  000025.dcm  000026.dcm  000027.dcm  000028.dcm  000029.dcm  000030.dcm  000031.dcm
data/5-Ax T2 Flair-36640/: 000000.dcm  000001.dcm  000002.dcm  000003.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm  000010.dcm  000011.dcm  000012.dcm  000013.dcm  000014.dcm  000015.dcm  000016.dcm  000017.dcm  000018.dcm  000019.dcm  000020.dcm  000021.dcm  000022.dcm  000023.dcm  000024.dcm  000025.dcm  000026.dcm  000027.dcm
docs/: githubInstruction.md  ~$软件需求规约.docx  测试计划.docx  测试计划2.docx  测试计划3.docx  立项ppt.pptx  立项建议书.doc  立项建议书.md  系统测试报告.docx  系统测试报告2.docx  软件架构文档.docx  软件需求规约.docx  迭代计划.doc  迭代计划2.doc  迭代计划3.docx  迭代评估报告1.docx  迭代评估报告2.docx
frontend/: README.md  angular.json  package-lock.json  package.json  proxy.config.json
frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  app.service.ts  global.ts
frontend/src/app/pages/patient/: patient-routing.module.ts  patient.component.css  patient.component.html  patient.component.ts  patient.module.ts  patient.service.ts
frontend/src/app/pages/welcome/: welcome.component.html  welcome.component.ts  welcome.module.ts  welcome.service.ts
frontend_pc/: README.md
frontend_pc/frontend_pc/: CMakeLists.txt  frontend_pc.pro
frontend_pc/frontend_pc/App/: App.pro  CMakeLists.txt  errorcode.h  loginchecker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend_pc/frontend_pc/App/Login/: login.qss  loginform.h  loginform.ui
frontend_pc/frontend_pc/App/commu/: communhttp.cpp  patient.cpp  userinfo.cpp
frontend_pc/frontend_pc/App/src/: App.pro  CMakeLists.txt  main.cpp  mainwindow.ui
frontend_pc/frontend_pc/App/src/commu/: patient.h
frontend_pc/src/: CMakeLists.txt
frontend_pc/src/App/: App.pro  CMakeLists.txt  README.md  main.cpp
frontend_pc/src/App/login/: loginchecker.cpp
frontend_pc/src/Test/: Test.pro  tst_testloginchecker.cpp
frontend_pc/src/app/: CMakeLists.txt  app.pro  errorcode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  struct_define.h
frontend_pc/src/app/commu/: communhttp.cpp  communhttp.h  imageinfo.cpp  imageinfo.h  patient.cpp  patient.h  patient_form.cpp  patient_form.h  patient_form.ui  prediction.cpp  urlbase.h  userinfo.h
frontend_pc/src/app/general_processing/: general_processing.cpp  general_processing.h
frontend_pc/src/app/load/: download_form.cpp  download_form.h  download_form.ui  upload_form.cpp  upload_form.h  upload_form.ui
frontend_pc/src/app/login/: loginchecker.cpp  loginchecker.h  loginform.cpp  loginform.h  loginform.ui  signup_form.cpp  signup_form.ui
frontend_pc/src/app/predict/: predict_form.cpp  predict_form.h  predict_form.ui
frontend_pc/src/app/registration/: CMakeLists.txt  RegistrationWorker.cpp  RegistrationWorker.h  registration_worker.cpp  registration_worker.h
frontend_pc/src/app/segmentation/: CMakeLists.txt  segmentation_worker.cpp  segmentation_worker.h
frontend_pc/src/app/utils/: general_util.cpp  general_util.h  vtk_add_seed_callback.h  vtk_point_picker_callback.cpp  vtk_point_picker_callback.h
frontend_pc/src/app/voxel2mesh/: CMakeLists.txt  Voxel2Mesh.cpp
frontend_pc/src/resources/: app.qrc  myapp.rc
frontend_pc/src/resources/qssfile/: dark_theme.qss  load_form.qss
frontend_pc/src/test/: test.pro  test_commun.cpp  test_commun.h  test_image.cpp  test_image.h  test_login.cpp  test_login.h  test_main.cpp  test_mainwindowui.cpp  test_mainwindowui.h  test_patient.cpp  test_patient.h  tst_all.cpp  tst_testcommun.cpp  tst_testloginchecker.cpp  tst_testloginchecker.h
frontend_qt/: .gitignore  communhttp.cpp  communhttp.h  frontend_qt.pro  loginform.cpp  loginform.ui  main.cpp  mainwindow.ui  resource.qrc  test_window.cpp  test_window.h  test_window.ui  userinfo.cpp  userinfo.h
ml_model/: train.py
server/: .gitignore  config.py  config.yaml.swap  config_test.py
server/auth/: Dockerfile.swap  README.md  app.py  controller.py  gunicorn.conf.py  migration.sql  model.py  requirement.txt  swagger.yaml  test_redisConfig.py
server/auth/register/: register.py
server/patients/: Dockerfile.swap  app.py  controller.py  imageController.py  migration.sql  model.py  redisConfig.py  requirement.txt  swagger.yaml
server/patients/register/: register.py
server/predict/: app.py  controller.py  requirement.txt
server/predict/ml_model/: mlModel.py  model.py
server/predict/ml_model/model_param/: model_states.pth
server/register/: test_register.py
基线库/安装包/: MedLab.dmg
基线库/源代码/frontend/: frontend_pc.pro
基线库/源代码/frontend/app/: CMakeLists.txt  errorcode.h  main.cpp  mainwindow.cpp  mainwindow.qrc  mainwindow.ui  struct_define.h
基线库/源代码/frontend/app/commu/: imageinfo.cpp  imageinfo.h  patient.h  patient_form.cpp  prediction.h  urlbase.h  userinfo.cpp  userinfo.h
基线库/源代码/frontend/app/general_processing/: general_processing.cpp  general_processing.h
基线库/源代码/frontend/app/load/: download_form.cpp  download_form.ui  upload_form.cpp
基线库/源代码/frontend/app/login/: loginchecker.h  loginform.h  loginform.ui  signup_form.h
基线库/源代码/frontend/app/registration/: registration_worker.h
基线库/源代码/frontend/app/utils/: general_util.cpp  (+4 more)
基线库/源代码/frontend/resources/: myapp.rc
基线库/源代码/frontend/test/: test_commun.h  test_login.cpp  test_login.h  test_main.cpp
基线库/源代码/server/: README.md
基线库/源代码/server/auth/: Dockerfile.swap  controller.py  model.py  requirement.txt  swagger.yaml  test_model.py
基线库/源代码/server/patients/: Dockerfile.swap  __init__.py  app.py  gunicorn.conf.py  migration.sql  model.py  swagger.yaml  test_model.py
基线库/源代码/server/predict/: Dockerfile.swap  controller.py  swagger.yaml
(+3 files in other folders)
