# 最低版本要求
cmake_minimum_required(VERSION 3.0)

# 设置工程名称
project(MedPlatform)

# 设置工程包含当前目录
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# VTK
find_package(VTK REQUIRED)
if(VTK_FOUND)
  include(${VTK_USE_FILE})
else(VTK_FOUND)
  message(FATAL_ERROR "VTK not found. Please set VTK_DIR.")
endif(VTK_FOUND)


# QT
find_package(Qt5Widgets)
find_package(Qt5WebEngineWidgets)

# 包含目录，引入头文件搜索路径
include_directories(
  ${VTK_DIR}
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/App
  ${PROJECT_SOURCE_DIR}/App/Registration
  ${PROJECT_SOURCE_DIR}/App/Segmentation
  ${PROJECT_SOURCE_DIR}/App/Visualization
  ${CMAKE_CURRENT_BINARY_DIR})

# SRC
# GLOB将所有匹配<globbing-expressions>的文件挑选出来
file(GLOB
     PROJECT_SRCS
     ${PROJECT_SOURCE_DIR}/App
     ${PROJECT_SOURCE_DIR}/App/*.cpp
     ${PROJECT_SOURCE_DIR}/App/*.cxx
     ${PROJECT_SOURCE_DIR}/App/*.h)

# QRC
# set(PROJECT_QRCS App/.qrc)

# UI
set(PROJECT_UIS App/mainwindow.ui  App/Login/loginform.ui)

# 链接库文件
#link_directories(${PROJECT_SOURCE_DIR}/lib)

foreach(source IN LISTS PROJECT_SRCS)
    source_group("\\" FILES "${source}")
endforeach()

# 添加可执行文件
add_executable(MedPlatform ${PROJECT_SRCS} ${PROJECT_UIS} ${PROJECT_QRCS})

# 链接库
target_link_libraries(MedPlatform
                      ${VTK_LIBRARIES}
                      Qt5::Widgets)

# 屏蔽Release运行时的控制台窗口
set_target_properties(${PROJECT_NAME}
                      PROPERTIES LINK_FLAGS_RELEASE
                                 "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
								 
# 添加子目录
add_subdirectory(App)
